--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,11 @@
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fdba74\" \"php artisan octane:start --watch\" \"php artisan queue:listen --tries=1\" \"npm run dev\" --names='server,queue,vite'"
+            "npx concurrently -c \"#93c5fd,#c4b5fd,#fdba74\" \"php artisan octane:start --server=frankenphp --poll\" \"php artisan queue:listen --tries=1\" \"npm run dev\" --names='server,queue,vite'"
+        ],
+        "dev-full": [
+            "Composer\\Config::disableProcessTimeout",
+            "./dev-full.sh"
         ],
         "test": [
             "@php artisan config:clear --ansi",
