--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "devDependencies": {
         "@prettier/plugin-php": "^0.24.0",
         "@shufo/prettier-plugin-blade": "^1.16.1",
+        "chokidar": "^5.0.0",
         "prettier": "^3.6.2"
     }
 }
